# ultimate-rag-bootcamp

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb  7-embedding.ipynb  8-openaiembeddings.ipynb
notebooks/data/structured_files/: inventory.xlsx
src/: main.py
